# AimBot

./: .gitignore  CMakePresets.json  CmakeLists.txt  README.md
config/: app.json
examples/: CMakeLists.txt  CaptureDetectionMain.cpp  CursorControllerMain.cpp
include/: pid.h  tool.h
include/aimbot/app/: AppConfig.h  AppConfigJson.h  LoadAppConfig.h
include/aimbot/capture/: DxgiDesktopDuplicationSource.h  IFrameSource.h
include/aimbot/config/: JsonConfig.h  JsonLoader.h
include/aimbot/cursor/: CursorAssist.h  PID.h  Win32CursorBackend.h
include/aimbot/gui/: AppModel.h  Dx11MatTexture.h  ImGuiApp.h
include/aimbot/gui/panels/: ConfigPanel.h  ControlPanel.h  IPanel.h  ViewsPanel.h
include/aimbot/input/: CreateInputBackend.h  IInputBackend.h  InputConfig.h  InputConfigJson.h  InputSystem.h  InputTypes.h  Win32InputBackend.h
include/aimbot/lock/: ITargetSelector.h  LockMatcher.h  NearestToAimSelector.h  TargetContext.h  TargetLock.h
include/aimbot/vision/: ContourDetector.h  Detection.h  HsvConfig.h  HsvMasker.h
include/aimbot/viz/: OverlayRenderer.h
legacy/: pid.cpp  tool.cpp
src/: main.cpp  pid.cpp  tool.cpp
src/app/: main.cpp
src/capture/: DxgiDesktopDuplicationSource.cpp
src/cursor/: CursorAssist.cpp
src/gui/: AppModel.cpp  Dx11MatTexture.cpp  ImGuiApp.cpp
src/input/: CreateInputBackend.cpp  InputSystem.cpp
src/lock/: LockMatcher.cpp  NearestToAimSelector.cpp  TargetLock.cpp
src/vision/: ContourDetector.cpp  HsvMasker.cpp
src/viz/: OverlayRenderer.cpp
